[package]
authors = ["C J Silverio <ceejceej@gmail.com>", "Chris Dickinson <chris@neversaw.us>"]
edition = "2018"
name = "boltzmann"
version = "0.3.0"

[dependencies]
anyhow = "1.0.32"
atty = "0.2.14"
include_dir = "0.6.0"
lazy_static = "1.4.0"
log = "*"
loggerv = "*"
owo-colors = "1"
prettytable-rs = "^0.8"
ron = "0.6.1"
semver = { version = "0.11.0", features = ["serde"] }
serde_json = "1.0.57"
structopt = "0.3.17"
subprocess = "*"
tera = "1.6.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.115"

[package.metadata.release]
sign-commit = true
sign-tag = true
exclude-paths = ["/docs/**", "/README.md", "/tests/**", "/bin/**", "examples/**"]
no-dev-version = true
