[package]
authors = ["C J Silverio <ceejceej@gmail.com>", "Chris Dickinson <chris@neversaw.us>"]
edition = "2018"
name = "boltzmann"
version = "0.4.3"
documentation = "https://www.boltzmann.dev/en/docs/latest/"
description = "A scaffolder for Boltzmann.js http service projects."
license = "Apache-2.0"
include = ["src/**/*", "docs/contents/reference/*.md", "templates/**/*"]

[package.metadata.release]
sign-commit = true
sign-tag = true
exclude-paths = ["/docs/**", "/README.md", "/tests/**", "/bin/**", "examples/**"]
no-dev-version = true

[dependencies]
anyhow = "1.0.32"
atty = "0.2.14"
include_dir = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.13"
loggerv = "0.7"
owo-colors = "1.2"
prettytable-rs = "^0.8"
ron = "0.6.1"
semver = { version = "0.11.0", features = ["serde"] }
serde_json = "1.0.57"
structopt = "0.3.17"
subprocess = "0.2"
tera = "1.6"
pulldown-cmark = "0.8.0"
slug = "0.1.4"
pulldown-cmark-to-cmark = "6.0.0"
path-slash = "0.1.4"

[dependencies.serde]
features = ["derive"]
version = "1.0.115"

