[package]
authors = ["C J Silverio <ceejceej@gmail.com>", "Chris Dickinson <chris@neversaw.us>"]
edition = "2021"
name = "boltzmann"
version = "0.6.0"
documentation = "https://www.boltzmann.dev/en/docs/latest/"
description = "A scaffolder for Boltzmann.js http service projects."
license = "Apache-2.0"
include = ["src/**/*", "docs/contents/reference/*.md", "templates/**/*"]

[package.metadata.release]
sign-commit = true
sign-tag = true

[dependencies]
anyhow = "1.0.32"
atty = "0.2.14"
clap = { version = "3.1.5", features = ["derive"] }
include_dir = { version = "0.7.2", features = ["glob"] }
lazy_static = "1.4.0"
log = "0.4.13"
loggerv = "0.7"
owo-colors = "3.2.0"
prettytable-rs = "^0.8"
ron = "0.7.0"
semver = { version = "1.0.6", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.57"
subprocess = "0.2"
tera = "1.6"
pulldown-cmark = "0.9.1"
slug = "0.1.4"
pulldown-cmark-to-cmark = "10.0.0"
path-slash = "0.1.4"
